@@ -6,7 +6,8 @@ CHANGES
 1.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added ``finished-log-level`` to be able to set the logging level when a
+  long running requests is finished.
 
 
 1.0.7 (2013-09-16)
